Made it look better on mobile devices, fixed bug on IE

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -149,6 +149,7 @@ header.main
 
 main
 {
+    display: block;
     width: 1024px;
     margin: 34px auto 0 auto;
     padding: 10px 10px 50px;
@@ -170,7 +171,7 @@ header.main nav ul li, footer.main nav ul li
     padding: 0 10px;
     display: inline-block;
     line-height: 2em;
-    font-size: 1.2em;
+    font-size: 17px;
 }
 
 header.main nav ul li:first-child, footer.main nav ul li:first-child
@@ -198,6 +199,11 @@ header.main nav a:first-child
     padding-left: 0;
 }
 
+header.main nav li.current
+{
+    background-color: #5ad;
+}
+
 footer.main
 {
     padding: 30px 0;
@@ -214,6 +220,15 @@ footer.main nav a, footer.main nav a:link, footer.main nav a:visited
 footer.main nav a:hover
 {
     color: #777;
+}
+
+/* For mobile devices that are big enough, add a little bit of left padding so logo doesn't look tucked away */
+@media screen and (min-device-width: 330px) and (max-device-width: 1023px)
+{
+    header.main nav ul li:first-child
+    {
+        padding-left: 10px;
+    }
 }
 
 @media screen and (min-device-width: 1024px)
